# cycleosm

./: .gitignore  Dockerfile  LICENSE  README.md  docker-commands.sh  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt  setup_conda.bat
archive/: setup_conda.bat
data/parquet/: h3_test.gzip
data/shp/: washington_dc_nodes.dbf  washington_dc_nodes.shp  washington_dc_nodes.shx  washington_dc_ways.shp  washington_dc_ways.shx  washington_dc_ways1.shp  washington_dc_ways1.shx
data/shp/hexes/: washington_dc_h3_ploys_13.shx  washington_dc_h3_ploys_4.shx
data/shp/osm/: washington_dc_buffered_ways.shp  washington_dc_nodes.dbf  washington_dc_nodes.shp  washington_dc_nodes.shx  washington_dc_ways.shp  washington_dc_ways.shx
process_files/: 00_download_pbfs.py  01_extract_osm.py  02_extract_h3.py  02_extract_h3_test.py
python/: __init__.py  h3_process.py  pbf_extractor.py  roads.py  utils.py
python/static/: error_message.txt  fclass_to_lanes.csv  lanes_to_width.csv
src/: 00_download_pbfs.py  01_extract_osm.py  03_extract_roads.py
src/cycleosm/: bikeosm.py  pbfdownloader.py  utils.py
src/cycleosm/static/: general - states.csv  geofabrik - latest.csv  osm_links - cycleways.txt  osm_links - fclasses.txt  osm_links - not_bikelanes.txt  osm_links - tags.csv
src/python/: bikeosm.py  pbf_downloader.py  pbf_extractor.py  pbfdownloader.py
src/python/static/: geofabrik - Sept2024.csv  geofabrik - test.csv  osm_links - notBikeLanes.csv
test/: 00_download_pbfs.py  01_extract_osm.py
